--- a/plugin.xml
+++ b/plugin.xml
@@ -59,7 +59,8 @@ Desarrollado para uso real en el **Hospital Universitario de Canarias (HUC)**.
 	<versions>
 		<version>
 			<num>1.3.0</num>
-			<compatibility>&gt;=10.0.0 &lt;12.0.0</compatibility>
+			<compatibility>~10.0.0</compatibility>
+			<compatibility>~11.0.0</compatibility>
 			<download_url>https://github.com/JuanCarlosAcostaPeraba/kanbanlooksgood/releases/download/v1.3.0/kanbanlooksgood-1.3.0.zip</download_url>
 		</version>
 		<version>
